--- a/docs/server.adoc
+++ b/docs/server.adoc
@@ -91,7 +91,7 @@ The following are the environment variables that you can set to configure `filew
 | env var | default value | description
 
 | `FILEWAY_SECRET_HASHES` | *Mandatory* | Comma-separated list of BCrypt hashes for the secrets.
-| `CHUNK_SIZE_KB` | 4096 | Chunk size for upload and internal buffer.
+| `CHUNK_SIZE_KB` | 4096 | Chunk size for upload and internal buffer, in kilobytes.
 | `BUFFER_QUEUE_SIZE` | 4 | Internal buffer queue of chunks.
 | `RANDOM_IDS_LENGTH` | 33 | Length of the random strings, e.g. in download links. 11 chars ~= 64 bit.
 | `REPRODUCIBLE_BUILD_INFO` | *Not set* | If set, prints info for xref:#RAB[reproducing a build] and exits.
