--- a/docs/server.adoc
+++ b/docs/server.adoc
@@ -93,6 +93,7 @@ The following are the environment variables that you can set to configure `filew
 | `FILEWAY_SECRET_HASHES` | *Mandatory* | Comma-separated list of BCrypt hashes for the secrets.
 | `CHUNK_SIZE_KB` | 4096 | Chunk size for upload and internal buffer, in kilobytes.
 | `BUFFER_QUEUE_SIZE` | 4 | Internal buffer queue of chunks.
+| `UPLOAD_TIMEOUT_SECS` | 240 | How many seconds an upload should "wait" for a downloadfootnote:[It's approximate, as the timeout is checked every 10 seconds.].
 | `RANDOM_IDS_LENGTH` | 33 | Length of the random strings, e.g. in download links. 11 chars ~= 64 bit.
 | `REPRODUCIBLE_BUILD_INFO` | *Not set* | If set, prints info for xref:#RAB[reproducing a build] and exits.
 |===
