--- a/docs/uploading.adoc
+++ b/docs/uploading.adoc
@@ -60,9 +60,12 @@ As simple as possible: just run it with a file as the only argument.
 ./fileway_ul.py myfile.bin
 ----
 
-It look for the secret in a env variable named `FILEWAY_PASSWORD`; if not set, it asks for user input. 
+It look for the secret:
+* in a env variable named `FILEWAY_SECRET`;
+* in a file in the user's home directory, called `.fileway-creds`;
+* prompting for user input. 
 
-In both cases, the secret can be saved to avoid asking for it; see xref:#SAV[the relevant section].
+In all cases, the secret can be saved to avoid asking for it; see xref:#SAV[the relevant section].
 
 After setting up the upload, it prints the information for the download. Something of the sort:
 
